# kalast-priv

./: .gitignore  Cargo.toml  README.rst  pyproject.toml
examples/app/: main.py
examples/crater_bias/: main.py  old.py
examples/didymos/: main.py
examples/hera_mars_swingby/: time.py  tmueller_scene.py
examples/hera_mars_swingby2/: main.py
examples/mesh/: simple.py  test.py  test_intercept.py
examples/mutual_events/: events_spice.py  setup.py
examples/roughness_davidsson/: check_intercept.py
examples/simple/: setup.py  simple.py
examples/two_spheres/: cbar_mutual.py  main.py  test.py
examples/win/: cube.py  main.rs
kalast/: __init__.py  _util.py  astro.py  entity.py  math.py  math.pyi  mesh.py  mesh.pyi  spice.py  util.py
kalast/app/: __init__.py  _core.py  body.py  camera.py  config.py  gpu.py  simulation.py
kalast/gpu/: __init__.py  compute.py  config.py  scene.py  win.py
kalast/io/: read.py
kalast/plot/: __init__.py  cbar.py  paper.mplstyle  smap.py  style.py  style1.mplstyle  tool.py  util.py
kalast/routines/: __init__.py  setup.py  setup.pyi
kalast/tpm/: __init__.py  core.py  emit.py  implicit.py  nonuniform.py  properties.py  properties.pyi  routine.py  routine.pyi
macros/: Cargo.toml
macros/src/: lib.rs
old/: vertices.txt
old/wgpu1/: draft.txt  hdr.rs  light.rs  mod.rs  model.rs  text_msd.rs  texture.rs  win.rs
scripts/: copy_stubs.py  remove_stubs.py  stubs_common.py
shaders/: depth_render.wgsl  hdr.wgsl  light.wgsl  light_render.wgsl  mesh_flat.wgsl  mesh_mat.wgsl  mesh_shadow.wgsl  shader.wgsl  shadow.wgsl  sky.wgsl  texture.wgsl  triangle_color_xy.wgsl  uniform_camera.wgsl  vertices_tex.wgsl  view_depth.wgsl  with_depth.wgsl
src/: entity.rs  lib.rs  math.rs  mesh.rs  python.rs  spice.rs  util.rs
src/app/: body.rs  camera.rs  config.rs  core.rs  depth.rs  gpu.rs  input.rs  mod.rs  simulation.rs  state.rs  uniform.rs  window.rs
src/app/pass/: depth.rs  light_cube.rs  mod.rs  render.rs  shadow.rs
src/gpu/: compute.rs  config.rs  hdr.rs  light.rs  mod.rs  render.rs  scene.rs  text.rs  text_msd.rs  texture.rs  win.rs
src/meshes/: cube.rs
src/py/: entity.rs  mesh.rs  mod.rs  util.rs
src/py/app/: body.rs  camera.rs  config.rs  gpu.rs  mod.rs  simulation.rs
src/py/routines/: setup.rs
src/py/tpm/: properties.rs
src/routines/: setup.rs
src/tpm/: core.rs  emit.rs  mod.rs  properties.rs  routine.rs
src/wgpu1/: buffer.rs  config.rs  render.rs  scene.rs  text.rs
stubs/kalast/tpm/: properties.pyi
