[project]
name = "kalast"
version = "0.1.0"
description = "TPM for binary asteroids"
readme = "README.rst"
requires-python = ">=3.14"
dependencies = [
    "matplotlib>=3.10",
    "numpy>=2.3",
    "pandas>=2.3",
    "pyarrow>=22",
    "scipy>=1.16",
    "spiceypy>=8.0",
    "symfit>=0.5",
    # "trimesh>=4.6.12",
    # "pywavefront>=1.3.3",
    # "pyrender>=0.1.45",
    # "pyglm>=2.8.2",
    # "joblib>=1.5.1",
    # "numba>=0.61.2",
]

classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[build-system]
requires = ["maturin>=1,<2"]
build-backend = "maturin"

[dependency-groups]
dev = ["maturin>=1.8.7", "ruff>=0.12.1"]

[tool.maturin]
features = [
    # "pyo3/extension-module"
]
module-name = "kalast._rs"
