[project]
name = "kalast"
version = "0.1.0"
description = "tpm for binary asteroids"
readme = "readme.rst"
requires-python = ">=3.14.2,<3.15"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.0",
    "pandas>=2.3",
    "pyarrow>=22",
    "scipy>=1.16",
    "spiceypy>=8.0",
    "symfit>=0.5",
]

classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[dependency-groups]
dev = [
    "ipython>=9.8.0",
    "maturin>=1.8.7",
    "mypy>=1.19.0",
    "ruff>=0.12.1",
]

[tool.maturin]
module-name = "kalast._rs"
